--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "wc-json-tree",
     "version": "0.0.1",
-    "description": "",
+    "description": "A small web component for rendering json in the form of a tree",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
