--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "wc-json-tree",
+    "name": "@asmalcev/wc-json-tree",
     "version": "0.0.1",
     "description": "A small web component for rendering json in the form of a tree",
-    "main": "index.js",
+    "main": "./dist/json-tree.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "vite",
+        "build": "vite build"
     },
     "repository": {
         "type": "git",
@@ -21,5 +22,15 @@
     "bugs": {
         "url": "https://github.com/asmalcev/wc-json-tree/issues"
     },
-    "homepage": "https://github.com/asmalcev/wc-json-tree#readme"
+    "homepage": "https://github.com/asmalcev/wc-json-tree#readme",
+    "devDependencies": {
+        "vite": "^6.2.1"
+    },
+    "type": "module",
+    "exports": {
+        "./json-tree": "./dist/json-tree.js"
+    },
+    "files": [
+        "dist"
+    ]
 }
